update dependencies and plugins in gradle files